[gd_scene load_steps=3 format=3 uid="uid://hxr2vk18pn4a"]

[ext_resource type="Script" path="res://main/TikTakToe/game/tablero/tablero.gd" id="1_dlyyp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_miv2y"]
size = Vector2(124, 124)

[node name="Tablero" type="CanvasGroup"]
script = ExtResource("1_dlyyp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Vertical1" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 489.0
offset_top = 113.0
offset_right = 514.0
offset_bottom = 535.0
color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="Vertical2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 638.0
offset_top = 113.0
offset_right = 663.0
offset_bottom = 535.0
color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="Horizontal1" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 365.0
offset_top = 237.0
offset_right = 787.0
offset_bottom = 262.0
color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="Horizontal2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 365.0
offset_top = 386.0
offset_right = 787.0
offset_bottom = 411.0
color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="cuadros" type="CanvasGroup" parent="."]

[node name="9" type="Area2D" parent="cuadros"]
position = Vector2(725, 474)
metadata/_edit_group_ = true

[node name="9" type="CollisionShape2D" parent="cuadros/9"]
shape = SubResource("RectangleShape2D_miv2y")

[node name="8" type="Area2D" parent="cuadros"]
position = Vector2(576, 472)
metadata/_edit_group_ = true

[node name="8" type="CollisionShape2D" parent="cuadros/8"]
shape = SubResource("RectangleShape2D_miv2y")

[node name="7" type="Area2D" parent="cuadros"]
position = Vector2(425, 473)
metadata/_edit_group_ = true

[node name="7" type="CollisionShape2D" parent="cuadros/7"]
shape = SubResource("RectangleShape2D_miv2y")

[node name="6" type="Area2D" parent="cuadros"]
position = Vector2(727, 322)
metadata/_edit_group_ = true

[node name="6" type="CollisionShape2D" parent="cuadros/6"]
shape = SubResource("RectangleShape2D_miv2y")

[node name="5" type="Area2D" parent="cuadros"]
position = Vector2(575, 325)
metadata/_edit_group_ = true

[node name="5" type="CollisionShape2D" parent="cuadros/5"]
shape = SubResource("RectangleShape2D_miv2y")

[node name="4" type="Area2D" parent="cuadros"]
position = Vector2(424, 324)
metadata/_edit_group_ = true

[node name="4" type="CollisionShape2D" parent="cuadros/4"]
shape = SubResource("RectangleShape2D_miv2y")

[node name="3" type="Area2D" parent="cuadros"]
position = Vector2(726, 174)
metadata/_edit_group_ = true

[node name="3" type="CollisionShape2D" parent="cuadros/3"]
shape = SubResource("RectangleShape2D_miv2y")

[node name="1" type="Area2D" parent="cuadros"]
position = Vector2(425, 175)
metadata/_edit_group_ = true

[node name="1" type="CollisionShape2D" parent="cuadros/1"]
shape = SubResource("RectangleShape2D_miv2y")

[node name="2" type="Area2D" parent="cuadros"]
position = Vector2(575, 175)
metadata/_edit_group_ = true

[node name="2" type="CollisionShape2D" parent="cuadros/2"]
shape = SubResource("RectangleShape2D_miv2y")

[connection signal="input_event" from="cuadros/9" to="." method="_on__input_event_2_2"]
[connection signal="input_event" from="cuadros/8" to="." method="_on__input_event_1_2"]
[connection signal="input_event" from="cuadros/7" to="." method="_on__input_event_0_2"]
[connection signal="input_event" from="cuadros/6" to="." method="_on__input_event_2_1"]
[connection signal="input_event" from="cuadros/5" to="." method="_on__input_event_1_1"]
[connection signal="input_event" from="cuadros/4" to="." method="_on__input_event_0_1"]
[connection signal="input_event" from="cuadros/3" to="." method="_on__input_event_2_0"]
[connection signal="input_event" from="cuadros/1" to="." method="_on__input_event_0_0"]
[connection signal="input_event" from="cuadros/2" to="." method="_on__input_event_1_0"]
